Many fixes. Improve documentation.
Make ex-inner types public. Work around problems with place types
(Yahoo! returns invalid (but useful) place type names.)

--- a/src/main/java/winterwell/jgeoplanet/package.html
+++ b/src/main/java/winterwell/jgeoplanet/package.html
@@ -9,12 +9,13 @@
 </head>
 <body bgcolor="white">
 
-jWoe is an LGPL client library for the Yahoo! GeoPlanet service.
+jGeoPlanet is an LGPL client library for the Yahoo! GeoPlanet service.
 
 <h2>Related Documentation</h2>
 
 For overviews, tutorials, examples, guides, and tool documentation, please see:
 
+<a href="http://www.winterwell.com/software/jgeoplanet">http://www.winterwell.com/software/jgeoplanet</a>
 <!-- Put @see and @since tags down here. -->
 
 </body>
