Add in a bit of logging

--- a/src/main/java/com/winterwell/jgeoplanet/package.html
+++ b/src/main/java/com/winterwell/jgeoplanet/package.html
@@ -10,6 +10,7 @@
 <body bgcolor="white">
 
 jGeoPlanet is an LGPL client library for the Yahoo! GeoPlanet service.
+The library provides a natural Java interface to version 1.3 of the service. 
 GeoPlanet is the main class and a good starting point for exploring
 the library.
 
