Change package to com.joehalliwell.jgeoplanet

--- a/src/main/java/com/joehalliwell/jgeoplanet/package.html
+++ b/src/main/java/com/joehalliwell/jgeoplanet/package.html
@@ -3,7 +3,7 @@
 <head>
     <!--
 
-      (c) Winterwell Associates 2009
+      (c) Winterwell Associates 2009-2015
 
     -->
 </head>
@@ -26,7 +26,7 @@ List&lt;Place&gt; suburbs = edinburgh.getChildren().get();
 
 For overviews, tutorials, examples, guides, and tool documentation, please see:
 
-<a href="http://www.winterwell.com/software/jgeoplanet">http://www.winterwell.com/software/jgeoplanet</a>
+<a href="http://www.joehalliwell.com/jGeoPlanet">http://www.joehalliwell.com/jGeoPlanet</a>
 <!-- Put @see and @since tags down here. -->
 
 </body>
