Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       </header>
       <section>
         <h1>
-<a id="jgeoplanet---the-java-library-for-yahoo-geoplanet" class="anchor" href="#jgeoplanet---the-java-library-for-yahoo-geoplanet" aria-hidden="true"><span class="octicon octicon-link"></span></a>jGeoPlanet - the java library for Yahoo! GeoPlanet</h1>
+<a id="jgeoplanet---the-java-client-for-yahoo-geoplanet" class="anchor" href="#jgeoplanet---the-java-client-for-yahoo-geoplanet" aria-hidden="true"><span class="octicon octicon-link"></span></a>jGeoPlanet - the Java client for Yahoo! GeoPlanet</h1>
 
 <p>JGeoPlanet is a small library providing easy access to the Yahoo! GeoPlanet
 API. It allows you to look up WOE (Where On Earth) IDs, and explore the
 relationships between different places e.g. to find the towns within a given
 country.</p>
 
-<p>Homepage: <a href="http://www.winterwell.com/software/jgeoplanet/">http://www.winterwell.com/software/jgeoplanet/</a></p>
+<p>Homepage: <a href="http://www.joehalliwell.com/jGeoPlanet">http://www.joehalliwell.com/jGeoPlanet</a></p>
 
 <h2>
 <a id="dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dependencies</h2>
@@ -46,13 +46,13 @@ country.</p>
 <h2>
 <a id="feedback" class="anchor" href="#feedback" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feedback</h2>
 
-<p>Please report any bugs to <a href="mailto:joe@joehalliwell.com">joe@joehalliwell.com</a>.</p>
+<p>Please report any bugs to <a href="mailto:joe.halliwell@gmail.com">joe.halliwell@gmail.com</a>.</p>
 
 <h2>
 <a id="licence" class="anchor" href="#licence" aria-hidden="true"><span class="octicon octicon-link"></span></a>Licence</h2>
 
 <p>Developed by Joe Halliwell. This code is copyright (c) Winterwell Associates
-Ltd, 2009. It is released as open-source under the LGPL license. See the file
+Ltd, 2009-2015. It is released as open-source under the LGPL license. See the file
 LICENCE.txt for a copy of this licence. This code comes with no warranty or
 support.</p>
 
@@ -65,10 +65,13 @@ source code.</p>
 <h2>
 <a id="versions" class="anchor" href="#versions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Versions</h2>
 
-<p>0.1.3 Support Yahoo Geocode; various bugfixes. This release breaks the API.
-0.1.2 Support multiple place types; add bounding box. This release breaks API.
-0.1.1 Added Place.getCountry()
-0.1.0 Inital release</p>
+<ul>
+<li>0.2.0 Changed package to com.joehalliwell.jgeoplanet. Available on Maven Central.</li>
+<li>0.1.3 Support Yahoo Geocode; various bugfixes. This release breaks the API.</li>
+<li>0.1.2 Support multiple place types; add bounding box. This release breaks API.</li>
+<li>0.1.1 Added Place.getCountry()</li>
+<li>0.1.0 Inital release</li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/joehalliwell">joehalliwell</a></p>
